<resources>
    <string name="app_name">Contazul</string>
    <string name="activityLogin_textViewFuncionalidade">Autenticação</string>
    <string name="activityLogin_editTextUsuario">Usuário</string>
    <string name="activityLogin_editTextSenha">Senha</string>
    <string name="activityLogin_buttonAcessar">Acessar</string>
    <string name="activityLogin_textViewOu">Ou</string>
    <string name="activityLogin_buttonCadastrar">Cadastre-se</string>
    <string name="activityLogin_RE09">Usuário e/ou senha inválido(s)</string>
    <string name="activityLogin_RE07">O campo senha é obrigatório</string>
    <string name="activityLogin_RE06">O campo usuário é obrigatório</string>
    <string name="activityCadastro_textViewFuncionalidade">Cadastrar</string>
    <string name="activityCadastro_editTextNomeDoUsuario">Nome do usuário</string>
    <string name="activityCadastro_editTextSenha">Senha</string>
    <string name="activityCadastro_editTextConfirmarSenha">Confirmar senha</string>
    <string name="activityCadastro_buttonCadastrar">Cadastrar</string>
    <string name="activityCadastro_RE01">Cadastro efetuado com sucesso</string>
    <string name="activityCadastro_tituloSucesso">Sucesso</string>
    <string name="activityCadastro_popupBotaoProsseguir">Prosseguir</string>
    <string name="activityCadastro_RE02">Usuário já existente no cadastro!</string>
    <string name="activityCadastro_RE03">Caracteres especiais não são validos</string>
    <string name="activityCadastro_RE04">As senhas estão diferentes</string>
    <string name="activityCadastro_RE05">No mínimo 4 caracteres para a senha</string>
    <string name="activityCadastro_RE06">O campo nome de usuário é obrigatório</string>
    <string name="activityCadastro_RE07">O campo Senha é obrigatório</string>
    <string name="activityCadastro_RE08">O campo confirmar senha é obrigatório</string>
    <string name="activitySelecaoConta_funcionalidade">Seleção de conta</string>
    <string name="activitySelecaoConta_buttonCriarContazul">Criar contazul</string>
    <string name="activitySelacaoConta_popupBotaoProsseguir">OK</string>
    <string name="activitySelacaoConta_RE_10">Contazul cadastrada com sucesso</string>
    <string name="activitySelacaoConta_tituloSucesso">Sucesso</string>
    <string name="activitySelacaoConta_listaItemDescricao">Descrição:</string>
    <string name="activitySelacaoConta_listaItemPerfil">Perfil:</string>
    <string name="activitySelacaoConta_RE_20">Não há contas sendo gerenciada no momento, crie uma “Contazul”</string>
    <string name="activitySelacaoConta_selecionarConta">Selecione a Contazul:</string>
    <string name="activityPerfilConta_funcionalidade">Perfil da conta</string>
    <string name="activityPerfilConta_perfilDaConta">Perfil da conta:</string>
    <string name="activityPerfilConta_numeroContazul">Numero contazul:</string>
    <string name="activityPerfilConta_status">Status:</string>
    <string name="activityPerfilConta_editTextDescricaoConta">Descrição da conta</string>
    <string name="activityPerfilConta_editTextValorIdeal">Valor</string>
    <string name="activityPerfilConta_buttonDefinir">Definir</string>
    <string name="activityPerfilConta_buttonPopupOk">OK</string>
    <string name="activityPerfilConta_RE25">Dados definidos com sucesso</string>
    <string name="activityPerfilConta_sucesso">Sucesso</string>
    <string name="activityPerfilConta_textViewValorIdeal">Qual o valor ideal para economizar por mês?</string>
    <string name="activityPerfilConta_textViewValorValorFormatado">R$0,00</string>
    <string name="activityPerfilConta_textViewValidacaoValorZero">Informe um valor maior que zero</string>
    <string name="activityPerfilConta_atencao">Atenção</string>
    <string name="activityPerfilConta_mensagemPopup">Dados não definidos, é necessário informar ao menos um dos campos</string>
    <string name="activityPerfilConta_OK">OK</string>
    <string name="activityMenu_funcionalidade">Menu</string>
    <string name="activityMenu_buttonFecharMenu">Fechar menu</string>
    <string name="activityMenu_funcionalidade01">Central</string>
    <string name="activityMenu_funcionalidade02">Perfil da conta</string>
    <string name="activityMenu_funcionalidade03">Soma de saldo</string>
    <string name="activityMenu_funcionalidade04">Subtração de saldo</string>
    <string name="activityMenu_funcionalidade05">Lucro mensal</string>
    <string name="activityMenu_funcionalidade06">Contas a pagar</string>
    <string name="activityMenu_funcionalidade07">Simulador</string>
    <string name="activityMenu_funcionalidade08">Meta</string>
    <string name="activityMenu_funcionalidade09">Relatório</string>
    <string name="activityMenu_funcionalidade10">Centralização de conta</string>
    <string name="activityMenu_funcionalidade11">Seleção de conta</string>
    <string name="activityMenu_funcionalidade12">Sair</string>
    <string name="activityCentral_funcionalidade">Central</string>
    <string name="activityCentral_buttonMenu">Menu</string>
    <string name="activitySomaDeSaldo_funcionalidade">Soma de saldo</string>
    <string name="activitySomaDeSaldo_editText_DescricaoMovimentacao">Descrição da movimentação</string>
    <string name="activitySomaDeSaldo_editText_ValorDaMovimentacao">Valor</string>
    <string name="activitySomadeSaldo_button">Inserir</string>
    <string name="activitySomadeSaldo_textValorFormatado">R$0,00</string>
    <string name="activitySomadeSaldo_saldoAtual">Saldo atual:</string>
    <string name="activitySomadeSaldo_textViewRE28">Descrição é obrigatória</string>
    <string name="activitySomadeSaldo_textViewRE29">Valor é obrigatório</string>
    <string name="activitySomadeSaldo_textSucesso">Sucesso</string>
    <string name="activitySomadeSaldo_RE27">Movimento realizado com sucesso</string>
    <string name="activitySomadeSaldobutton_ok">Ok</string>
    <string name="activitySomaSaldolistaItemValorMovimentacao">Valor:</string>
    <string name="activitySomaSaldoMensagem">Informe um valor maior que zero</string>
    <string name="activitySomaSaldoOpcaoIncluirSomaDeSaldo">Incluir</string>
    <string name="activitySomaSaldoOpcaoListarSomaDeSaldo">Listar</string>
    <string name="listaSubtracaoSaldo_descricao">Descricao:</string>
    <string name="listaSubtracaoSaldo_valor">Valor:</string>
    <string name="listaSubtracaoSaldo_prioridade">Prioridade:</string>
    <string name="activitySubtracaodeSaldo_funcionalidade">Subtração de Saldo</string>
    <string name="activitySubtracaodeSaldo_editText_DescricaoMovimentacao">Descrição da movimentação</string>
    <string name="activitySubtracaodeSaldo_textViewRE28">Descrição é obrigatória</string>
    <string name="activitySubtracaodeSaldo_editText_ValorDaMovimentacao">Valor</string>
    <string name="activitySubtracaodeSaldo_textViewRE29">Valor é obrigatório</string>
    <string name="activitySubtracaodeSaldo_textValorFormatado">R$0,00</string>
    <string name="activitySubtracaodeSaldo_textView_Prioridade">Prioridade:</string>
    <string name="activitySubtracaodeSaldo_button">Inserir</string>
    <string name="activitySubtracaodeSaldoListaItemValorMovimentacao">Valor</string>
    <string name="activitySubtracaodeSaldoListaItemPrioridadeDeMovimentacao">Prioridade</string>
    <string name="activitySubtracaodeSaldoSaldoAtual">Saldo atual:</string>
    <string name="activitySubtracaodeSaldoIncluirSubtracaoSaldo">Incluir</string>
    <string name="activitySubtracaodeSaldoListarSubtracaoSaldo">Listar</string>
    <string name="activityLucroMensal_textViewFuncionalidade4">Lucro Mensal</string>
    <string name="activityLucroMensal_editTextDecricaoDoBeneficio">Descrição do benefício</string>
    <string name="activityLucroMensal_textViewRE30">Descrição obrigatória</string>
    <string name="activityLucroMensal_editTextValorDoLucromensal">Valor</string>
    <string name="activityLucroMensal_textViewValorFormatado">R$0,00</string>
    <string name="activityLucroMensal_textViewRE31">Valor é obrigatório</string>
    <string name="activityLucroMensal_buttonIncluir">Inserir</string>
    <string name="activityLucroMensal_buttonReceber">Receber</string>
    <string name="activityLucroMensal_buttonExcluir">Excluir</string>
    <string name="activityLucroMensalListaItemValorBeneficio">Valor:</string>
    <string name="activityLucroMensalListaItemDataBeneficio">Última data de recebimento:</string>
    <string name="activityLucroMensalListaItemSemData">Sem recebimento</string>
    <string name="activityLucroMensalItemButtonReceber">Receber</string>
    <string name="activityLucroMensalItemButtonExcluir">Excluir</string>
    <string name="activityLucroMensal_Sucesso">Sucesso</string>
    <string name="activityLucroMensal_REXX">Benefício incluído com sucesso</string>
    <string name="activityLucroMensal_OK">OK</string>
    <string name="activityLucroMensal_RE35">Confirma o recebimento para atualizar o saldo?</string>
    <string name="activityLucroMensal_RE36">Saldo atualizado com sucesso</string>
    <string name="activityLucroMensal_RE33">Confirma exclusão deste lucro mensal?</string>
    <string name="activityLucroMensal_RE34">Exclusão efetuada com sucesso</string>
    <string name="activityLucroMensal_Atencao">Atenção</string>
    <string name="activityLucroMensal_ButtonSim">Sim</string>
    <string name="activityLucroMensal_ButtonNao">Nao</string>
    <string name="activityLucroMensal_ListarLucroMensal">Listar</string>
    <string name="activityLucroMensal_IncluirLucroMensal">Incluir</string>
    <string name="activityCentral_status">Status da conta:</string>
    <string name="activityCentral_aviso01">Acesse perfil da conta para definir o valor ideal para economizar por mês</string>
    <string name="activityContasAPagar_TextViewFuncionalidade5">Contas a Pagar</string>
    <string name="activityContasAPagar_IncluirContaAPagar">INCLUIR CONTAS A PAGAR</string>
    <string name="activityContasAPagar_ListasDeContasAPagar">LISTA DE CONTAS A PAGAR</string>
    <string name="activityContasAPagar_EditTextDescricaoDaConta">Descrição</string>
    <string name="activityContasAPagar_textViewValorFormatado">R$0,00</string>
    <string name="funcionalidade_simulador">Simulador</string>
    <string name="simulador_subtitulo">Opções para simular:</string>
    <string name="simulador_opcao_01">Compra á vista...</string>
    <string name="simulador_opcao_02">Aderir dívida...</string>
    <string name="simulador_opcao_03">Remover dívida...</string>
    <string name="simulador_opcao_04">Novo benefício...</string>
    <string name="simulador_opcao_05">Remover benefício...</string>
    <string name="simulador_opcao_06">Atingir meta...</string>
    <string name="simulador_prosseguir">prosseguir</string>
    <string name="simulador_subtituloresultado">Resultado da simulação:</string>
    <string name="simulador_subtituloaplicar">É possível aplicar a simulação em seus dados atuais</string>
    <string name="simulador_aplicar">aplicar</string>
    <string name="simulador_subtitulofinalizar">Ou</string>
    <string name="simulador_finalizarResultado">Finalizar simulação</string>
    <string name="simulador_statussimulado">Status simulado: %1$s</string>
    <string name="simulador_statusatual">Status atual: %1$s</string>
    <string name="simulador_percentualeconomizadosimulado">Percentual economizado simulado: %1$s</string>
    <string name="simulador_percentualeconomizadoatual">Percentual economizado atual: %1$s</string>
    <string name="simulador_valoreconomizadosimulado">Valor economizado simulado: %1$s</string>
    <string name="simulador_valoreconomizadoatual">Valor economizado atual: %1$s</string>
    <string name="simulador_valorafetado">Economia %1$s no valor de: %2$s</string>
    <string name="simulador_meta">Meta:</string>
    <string name="simulador_statusmeta">Status simulado da meta: %1$s</string>
    <string name="simulador_valorrestantemeta">Valor restante: %1$s</string>
</resources>