<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.appcontazul.activity.SimuladorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_funcionalidade"
        android:text="@string/funcionalidade_simulador"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_subTitulo"
        android:text="@string/simulador_subtitulo"
        android:textSize="25sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="50sp"
        android:textColor="#696969"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/borda"
        tools:context="br.com.appcontazul.activity.SimuladorActivity">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_01"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:text="@string/simulador_opcao_01"
            android:layout_marginStart="30sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_02"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/simulador_opcao_02"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_03"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/simulador_opcao_03"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_04"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/simulador_opcao_04"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_05"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/simulador_opcao_05"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_06"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/simulador_opcao_06"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30sp"
            />
        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_definir"
        android:text="@string/simulador_prosseguir"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_gravity="center"
        android:onClick="prosseguir"
        />
</LinearLayout>
