<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_funcionalidade"
        android:text="@string/funcionalidade_simulador"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <ProgressBar
        android:id="@+id/pbHeaderProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        >
    </ProgressBar>

    <LinearLayout
        android:id="@+id/layout_resultadoSimulacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_subTitulo"
            android:text="@string/simulador_subtituloresultado"
            android:textSize="25sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="50sp"
            android:textColor="#696969"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda"
            android:paddingBottom="10dp"
            >

            <TextView
                android:id="@+id/textView_statusSimulado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_statussimulado"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView_statusAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_statusatual"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/textView_percentualEconomizadoSimulado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_percentualeconomizadosimulado"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView_percentualEconomizadoAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_percentualeconomizadoatual"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/textView_valorEconomizadoSimulado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_valoreconomizadosimulado"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView_valorEconomizadoAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_valoreconomizadoatual"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/textView_valorAfetado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_valorafetado"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_resultadoSimulacaoMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/textView_tituloMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulador_meta"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_marginStart="10sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/borda"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:id="@+id/textView_statusMeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simulador_statusmeta"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_marginLeft="5sp"
                    />

                <TextView
                    android:id="@+id/textView_valorRestante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simulador_valorrestantemeta"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    />
                </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_subtituloAplicar"
            android:text="@string/simulador_subtituloaplicar"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="15sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_aplicar"
            android:text="@string/simulador_aplicar"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFF"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:onClick="aplicar"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_subtituloOu"
            android:text="@string/simulador_subtitulofinalizar"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="20sp"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_finalizarSimulacao"
            android:text="@string/simulador_finalizarResultado"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:onClick="finalizarSimulacao"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>