<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.PerfilContaActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_funcionalidade"
            android:text="@string/activityPerfilConta_funcionalidade"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >
        </ProgressBar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_infoConta"
            android:text="Informações da conta:"
            android:textSize="25sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="30sp"
            android:textColor="#696969"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="15dp"
            android:background="@drawable/borda">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_perfilConta"
            android:text="@string/activityPerfilConta_perfilDaConta"
            android:textSize="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="15sp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_numeroContazul"
            android:text="@string/activityPerfilConta_numeroContazul"
            android:textSize="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_status"
            android:text="@string/activityPerfilConta_status"
            android:textSize="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_DescricaoConta"
            android:text=""
            android:hint="@string/activityPerfilConta_editTextDescricaoConta"
            style="@style/StyledTilEditTextTheme"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_valorIdeal"
            android:text="@string/activityPerfilConta_textViewValorIdeal"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:textColor="#696969"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activityPerfilConta_textViewValorFormatado"
            android:text="@string/activityPerfilConta_textViewValorValorFormatado"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="70sp"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_ValorIdeal"
            android:text=""
            android:hint="@string/activityPerfilConta_editTextValorIdeal"
            android:inputType="numberDecimal"
            style="@style/StyledTilEditTextTheme"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_validacaoValor0"
            android:text="@string/activityPerfilConta_textViewValidacaoValorZero"
            android:textSize="10sp"
            android:textColor="#FF0000"
            android:layout_marginTop="5sp"
            android:layout_marginStart="70sp"
            android:layout_marginEnd="70sp"
            android:visibility="invisible"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_definir"
            android:text="@string/activityPerfilConta_buttonDefinir"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:onClick="definir"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            />

    </LinearLayout>
</ScrollView>